--- a/package.json
+++ b/package.json
@@ -22,7 +22,10 @@
     "nodemon": "^3.0.1"
   },
   "dependencies": {
+    "colors": "^1.4.0",
     "dotenv": "^16.3.1",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "mongoose": "^7.6.3",
+    "morgan": "^1.10.0"
   }
 }
