--- a/config/config.env
+++ b/config/config.env
@@ -1,5 +1,5 @@
 NODE_ENV=development
 PORT=6969
-MONGO_URL=mongodb+srv://alimurad:Germany2@cluster0.uyhcp.mongodb.net/
+MONGO_URL=mongodb+srv://amurad:Germany1@cluster0.uyhcp.mongodb.net/
 GEOCODER_PROVIDER=mapquest
 GEOCODER_API_KEY=aFXPSiMI6WLhdXCbRZrUI5YwJiWe3Yqw
